--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^10.0.0",
     "recharts": "^3.6.0",
     "sonner": "^2.0.7",
-    "stripe": "^20.1.2",
+    "stripe": "^20.2.0",
     "tailwind-merge": "^3.4.0",
     "use-debounce": "^10.0.6",
     "zod": "^4.2.1",
